--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
+    "dom": "^0.0.3",
     "emailjs": "^4.0.3",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
@@ -37,6 +38,7 @@
     "react-simple-chatbot": "^0.6.1",
     "react-swiper": "^0.1.5",
     "react-toastify": "^10.0.5",
+    "router": "^1.3.8",
     "socket.io-client": "^4.7.5",
     "swiper": "^11.1.4",
     "tailwindcss": "^3.4.14",
